<resources>
    <string name="app_name">For You</string>
    <string name="action_settings">Settings</string>
    <string name="btn_back"><![CDATA[<< Skip]]></string>
    <string name="country_prompt">Country</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="free_code"></string>
    <string name="today_deal">Today Deal</string>
    <string name="about">About Us</string>
    <string name="language_setting">Change Language</string>
    <string name="language">Language</string>
    <string-array name="country_arrays">
        <item>Egypt</item>
        <item>Saudi Arabia</item>
        <item>Morocco</item>
        <item>United Arab Emirates</item>
        <item>Kuwait</item>
        <item>Bahrain</item>
        <item>Qatar</item>
    </string-array>
    <!-- Language select dialog -->
    <string-array name="lang_select">
        <item>English</item>
        <item>عربي</item>
    </string-array>
    <string-array name="categorie_array">
        <item>Restaurant</item>
        <item>Health</item>
        <item>Clothes</item>
        <item>Accessories</item>
        <item>Beauty Centers</item>
        <item>Car Maintenance</item>
        <item>Supermarket</item>
        <item>Shoes Shop</item>
        <item>Home Needs</item>
        <item>Camera &amp; Studio</item>
        <item>GYM</item>
        <item>Others</item>
    </string-array>
    <string-array name="sub_category_array" translatable="false">
        <item>Restaurant</item>
        <item>Cafe</item>
        <item>Health</item>
        <item>Clothes</item>
        <item>Accessories</item>
        <item>Beauty Centers</item>
        <item>Car Maintenance</item>
        <item>Supermarket</item>
        <item>Shoes Shop</item>
        <item>Home Needs</item>
        <item>Camera &amp; Studio</item>
        <item>GYM</item>
        <item>Others</item>
    </string-array>
    <string-array name="sub_categoryy_array" translatable="false">
        <item>Restaurant</item>
        <item>Cafe</item>
        <item>Hospital</item>
        <item>Doctor</item>
        <item>Lab</item>
        <item>Scan</item>
        <item>Women</item>
        <item>Men</item>
        <item>Baby</item>
        <item>Accessories</item>
        <item>Beauty Centers</item>
        <item>Mechanical</item>
        <item>Electrical</item>
        <item>EL-Srogy</item>
        <item>Car Washing</item>
        <item>Garage</item>
        <item>Supermarket</item>
        <item>Women Shoes</item>
        <item>Men Shoes</item>
        <item>Furniture</item>
        <item>Electronics Machine</item>
        <item>Camera and Studio</item>
        <item>GYM</item>
        <item>Others</item>
    </string-array>
    <string name="category_spiner" translatable="false">Categorie</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="type_msg">Type message</string>
    <string name="description">After the formation of the Galactic Empire, the Rebel Alliance recruits Jyn Erso (Felicity Jones) to work with a team including Cassian Andor (Diego Luna) to steal the design schematics of the Empire\'s new superweapon, the Death Star.</string>
    <string name="development">In February 2013, The Walt Disney Company CEO Bob Iger confirmed the development of two stand-alone films, each individually written by Lawrence Kasdan and Simon Kinberg. On February 6, Entertainment Weekly reported that Lucasfilm is working on two films featuring Han Solo and Boba Fett. Disney CFO Jay Rasulo has described the stand-alone films as origin stories. Kathleen Kennedy explained that the stand-alone films will not crossover with the films of the sequel trilogy…</string>
    <string name="lang_dialog_title">Change Language</string>
    <string name="lang_dialog_message">Your Language is ?</string>
    <string name="title_activity_descript" translatable="false">DescriptActivity</string>
    <string name="title_activity_decriptions" translatable="false">DecriptionsActivity</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="facebook_app_id" translatable="false">284496295297396</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb284496295297396</string>
    <string name="title_activity_clients" translatable="false">ClientsActivity</string>
    <string name="title_activity_items_client" translatable="false">ItemsClientActivity</string>
    <string name="title_activity_list_items" translatable="false">ListItemsActivity</string>
    <string name="title_activity_about_us" translatable="false">AboutUsActivity</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="title_activity_notifications" translatable="false">NotificationsActivity</string>
    <string name="title_activity_profile_user" translatable="false">ProfileUserActivity</string>
    <string name="title_activity_choose_location" translatable="false">Map</string>
    <string name="logout">Logout</string>


    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="about_us">A unique application locally and globally.Creation in Egypt. It features a productive partnership between service providers of all types and the user.The goal of this partnership to serve the community. Method is very easy through technology of this smart application that allows everyone from sevices and registered users to take advantage of all services ordered by use .In return user gets free service instance to do with other sector.</string>
    <string name="sihnup">Get Free Code</string>
    <string name="resume">Resume</string>
    <string name="comments">Comments</string>
    <string name="map">Map</string>
    <string name="call">Call</string>
    <string name="share">Share</string>
    <string name="descriptions">Description</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="resturant">Restaurant</string>
    <string name="cafe">Cafe</string>
    <string name="others">Others</string>
    <string name="gym">GYM</string>
    <string name="cam">Camera and Studio</string>
    <string name="furniture">Furniture</string>
    <string name="electronics">Electronics Machine</string>
    <string name="men_shoes">Men Shoes</string>
    <string name="women_shoes">Women Shoes</string>
    <string name="supermarket">Supermarket</string>
    <string name="mechanical">Mechanical</string>
    <string name="electrical">Electrical</string>
    <string name="garage">Garage</string>
    <string name="car_washing">Car Washing</string>
    <string name="srogy">EL-Srogy</string>
    <string name="accessories">Accessories</string>
    <string name="beauty_centers">Beauty Centers</string>
    <string name="baby">Baby</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="hospital">Hospital</string>
    <string name="doctor">Doctor</string>
    <string name="lab">Lab</string>
    <string name="scan">Scan</string>
    <string name="your_location">Your Location</string>
    <string name="open_net_map">Open Network To Get Your Direction!</string>

</resources>
